# FLAC

./: .gitignore  README.md  defaults.ini  download_weights.sh  eval_FLAC.py  eval_VAE.py  eval_pl.py  index.html  pyproject.toml  train.py  unwrap_model.py
AGREE/AGREE/: __init__.py  audio_model.py  factory.py  hf_model.py  loss.py  model.py  transformer.py  xRIR_vit.py
AGREE/AGREE/model_configs/: ViT-S-16.json  dinoV3.json  xRIRViT.json
AGREE/AGREE_train/: data.py  data_utils.py  file_utils.py  main.py  params.py  train.py
baselines/: eval_baselines.py
baselines/datasets/: AR_dataset.py  HAA_dataset.py  utils.py
data/AR/: seen_eval.json  unseen_eval.json
data/HAA/: alldata_base.json  prepare_data.py  test_base.json  train_base.json  val_base.json
data/HAA/depth_maps/: classroomBase_depth_image.npy  complexBase_depth_image.npy  dampenedBase_depth_image.npy  hallwayBase_depth_image.npy
src/configs/dataset_configs/custom_metadata/: AR_md.py  HAA_md.py
src/configs/model_configs/VAE/: VAE.json
src/data/: dataset.py  utils.py
src/inference/: generation.py  sampling.py
src/metrics/: metric_callback.py
src/metrics/modules/: C50.py  EDT.py  Env.py  FD.py  RT60.py  Retrieval.py  l1_stft.py  l1_stft_multires.py
src/models/: autoencoders.py  blocks.py  bottleneck.py  conditioners.py  diffusion.py  discriminators.py  dit.py  factory.py  pretransforms.py  simplevit.py  utils.py
src/training/: __init__.py  autoencoders.py  diffusion.py  factory.py  utils.py
src/training/losses/: __init__.py  auraloss.py  losses.py
static/css/: index.css
(+19 files in other folders)
