[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "FLAC"
version = "1.0"
description = "Few-shot RIR generation with flow matching"
authors = [
    { name="Amandine Brunetto" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "torchvision==0.22.0",
    "torchmetrics==0.11.4",
    "pytorch_lightning==2.1.0",
    "transformers==4.57.0",
    "huggingface_hub==0.35.3",
    "numpy==1.23.5",
    "scipy==1.15.3",
    "librosa==0.11.0",
    "einops==0.8.2",
    "ema-pytorch==0.2.3",
    "safetensors==0.7.0",
    "tqdm",
    "wandb==0.15.4",
    "deepspeed==0.18.6",
    "pyroomacoustics==0.8.3",
    "alias-free-torch==0.0.6",
    "k-diffusion==0.1.1",
    "interface==2.11.1",
    "plotting==0.0.7",
    "prefigure==0.0.9", 
]

[tool.setuptools.packages.find]
where = ["."]